# sdk_examples_ros

./: LICENSE  README.md
sdk_examples_ros/: CMakeLists.txt  package.xml
sdk_examples_ros/config/: feature_detector.rviz
sdk_examples_ros_interfaces/: CMakeLists.txt  package.xml
sdk_examples_ros_interfaces/srv/: DetectFeatures.srv
sdk_examples_ros_services/: CMakeLists.txt  package.xml
sdk_examples_ros_services/feature_detector/: CMakeLists.txt  feature_detector.manifest.textproto  feature_detector_main.cpp  feature_detector_node.cc  feature_detector_node.hh  feature_detector_node_standalone.cc
sdk_examples_ros_services/listener_service/: CMakeLists.txt  listener_service.manifest.textproto  listener_service_default_config.pbtxt  listener_service_main.cpp  minimal_subscriber.cpp  minimal_subscriber.hpp  ros_config.proto
sdk_examples_ros_skills/: CMakeLists.txt  package.xml
sdk_examples_ros_skills/src/feature_detector/: CMakeLists.txt  feature_detector.cc  feature_detector.hh  feature_detector.proto  feature_detector_skill.cc  feature_detector_skill.hh  feature_detector_skill.manifest.textproto
sdk_examples_ros_skills/src/talker_skill/: CMakeLists.txt  minimal_publisher.cc  minimal_publisher.hh  talker_skill.cc  talker_skill.hh  talker_skill.manifest.textproto  talker_skill.proto  talker_skill_main.cc
