<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sdk_examples_ros</name>
  <version>0.0.1</version>
  <description>Metapackage for Intrinsic Flowstate SDK Examples</description>
  <maintainer email="mjcarroll@intrinsic.ai">Michael Carroll</maintainer>
  <license>Intrinsic - See LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sdk_examples_ros_skills</depend>
  <depend>sdk_examples_ros_services</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
