<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sdk_examples_ros_services</name>
  <version>0.0.1</version>
  <description>Intrinsic Flowstate SDK Examples - Services</description>
  <maintainer email="mjcarroll@intrinsic.ai">Michael Carroll</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sdk_examples_ros_interfaces</depend>
  <depend>intrinsic_sdk</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
